--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,10 @@ set(PICO_BOARD pico CACHE STRING "Board type")
 
 cmake_minimum_required(VERSION 3.12)
 
+# Name project
+SET(ProjectName RTOS_2)
 # Set any variables required for importing libraries
-if (DEFINED ENV{FREERTOS_PATH})
-  SET(FREERTOS_PATH $ENV{FREERTOS_PATH})
-else()
-  SET(FREERTOS_PATH ${CMAKE_CURRENT_LIST_DIR}/FreeRTOS-Kernel)
-endif()
+SET(FREERTOS_PATH ${CMAKE_CURRENT_LIST_DIR}/FreeRTOS)
 
 message("FreeRTOS Kernel located in ${FREERTOS_PATH}")
 
@@ -30,28 +28,32 @@ include(pico_sdk_import.cmake)
 include(${FREERTOS_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
 
 # Define project
-project(embarcatech-tarefa-freertos-2 C CXX ASM)
+project(${ProjectName} C CXX ASM)
 
 # Initialize the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-add_executable(embarcatech-tarefa-freertos-2
-    main.c
+add_executable(${ProjectName}
+    src/main.c
 )
 
-target_include_directories(embarcatech-tarefa-freertos-2 PRIVATE
+target_include_directories(${ProjectName} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_CURRENT_LIST_DIR}/include
+    ${CMAKE_CURRENT_LIST_DIR}/src
 )
 
-target_link_libraries(embarcatech-tarefa-freertos-2 
-    pico_stdlib 
-    FreeRTOS-Kernel-Heap4 
+target_link_libraries(${ProjectName}
+    pico_stdlib
+    FreeRTOS-Kernel-Heap4
     hardware_i2c
-    )
+    hardware_pwm
+    hardware_gpio
+)
 
-pico_add_extra_outputs(embarcatech-tarefa-freertos-2)
+pico_add_extra_outputs(${ProjectName})
 
 # if you have anything in "lib" folder then uncomment below - remember to add a CMakeLists.txt
 # file to the "lib" directory
 #add_subdirectory(lib)
+
